Fixed bug in navbar z-index

--- a/responsive-page-design/style.scss
+++ b/responsive-page-design/style.scss
@@ -26,6 +26,7 @@ body {
   padding: var(--navbar-padding-vertical) var(--navbar-padding-horizontal);
   height: var(--navbar-height);
   border-bottom: rgba(46, 232, 246, 0.3) solid 1px;
+  z-index: 2;
 }
 
 .navbar-inner {
